# hydrosat-data

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  pyproject.toml  runbook.md
.github/workflows/: ci.yml  release.yml
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: export_lake_outputs.sql
dbt/models/: schema.yml
dbt/models/curated/: cur_satellite_tile_summary.sql
dbt/models/staging/: stg_satellite_observations.sql
hydrosat_dagster/: __init__.py  definitions.py
sight_poc_dagster/: __init__.py  definitions.py
tests/: test_definitions.py
utils/mermaid/: data-pipeline.mmd
