[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrosat-dagster"
version = "0.1.0"
description = "Dagster code location for the Hydrosat technical assignment."
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34.0",
  "dagster>=1.7.0",
  "dagster-aws>=0.23.0",
  "dagster-postgres>=0.23.0",
  "dagster-webserver>=1.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]

